--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <header>
-            <img src="/uploads/2020/12/header_0_1609082687.svg">
+            <img src="https://learn.algoritmika.org/uploads/2020/12/header_0_1609082687.svg">
         </header>
         <main>
             <nav>
@@ -15,9 +15,9 @@
             </nav>
             <h1>Боулдеринг</h1>
             <p class="text-container">
-                <img src="/uploads/2020/12/image1_0_1609082687.png">
-                <img src="/uploads/2020/12/image2_0_1609082687.png">
-                <img src="/uploads/2020/12/image3_0_1609082687.png">
+                <img src="https://learn.algoritmika.org/uploads/2020/12/image1_0_1609082687.png">
+                <img src="https://learn.algoritmika.org/uploads/2020/12/image2_0_1609082687.png">
+                <img src="https://learn.algoritmika.org/uploads/2020/12/image3_0_1609082687.png">
             </p>
             <p class="text">
             Никогда не были на скалодроме? — Скорее сделайте первую попытку залезть наверх! На наших площадках залы разной трудности. Тренировки безопасны, для новичков предусмотрена автостраховка, в залах работают инструкторы. Для детей выделенные зоны с увлекательными аттракционами. Есть абонемент, скидки и система индивидуальных занятий. Перед посещением, пожалуйста, ознакомьтесь с <a href="#">правилами</a> техники безопасности.
