--- a/index.html
+++ b/index.html
@@ -1,30 +1,36 @@
 <html>
     <head>
-        <title>Боулдеринг</title>
+        <title>Турисический сайт</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
+            <img src="https://github.com/queso65/lesson-for-children-4/blob/main/pngwing.com%20(4).png?raw=true">
         </header>
+         <nav>
+            <a>О нас</a>
+            <a>Цены</a>
+            <a>О странах</a>
+        </nav>
         <main>
-            <nav>
-                <a href="#">Расписание</a>
-                <a href="#">О занятиях</a>
-                <a href="#">Адрес клубов</a>
-            </nav>
-            <h1>Боулдеринг</h1>
-            <p class="text-container">
-                <img src="https://learn.algoritmika.org/uploads/2020/12/image1_0_1609082687.png">
-                <img src="https://learn.algoritmika.org/uploads/2020/12/image2_0_1609082687.png">
-                <img src="https://learn.algoritmika.org/uploads/2020/12/image3_0_1609082687.png">
+            <h1>Турисический сайт</h1>
+            <h2>Фото стран</h2>
+            <p>
+            <img src="https://api.selcdn.ru/v1/SEL_50469/funandsun-cdn/1c405e56-d292-429a-a114-33aa7f83b25d.webp">
+            <img src="https://api.selcdn.ru/v1/SEL_50469/funandsun-cdn/1c405e56-d292-429a-a114-33aa7f83b25d.webp">
+            <img src="https://api.selcdn.ru/v1/SEL_50469/funandsun-cdn/1c405e56-d292-429a-a114-33aa7f83b25d.webp">
             </p>
-            <p class="text">
-            Никогда не были на скалодроме? — Скорее сделайте первую попытку залезть наверх! На наших площадках залы разной трудности. Тренировки безопасны, для новичков предусмотрена автостраховка, в залах работают инструкторы. Для детей выделенные зоны с увлекательными аттракционами. Есть абонемент, скидки и система индивидуальных занятий. Перед посещением, пожалуйста, ознакомьтесь с <a href="#">правилами</a> техники безопасности.
-            </p>
+            <h2>Путевки в страны:</h2>
+            <ul>
+                <li>Таиланд</li>
+                <li>Турция</li>
+                <li>Египет</li>
+            </ul>
+            <p class="text">Добро пожаловать на наш туристический сайт — ваш путеводитель в мир незабываемых путешествий и ярких впечатлений. Здесь вы найдете лучшие предложения по экскурсиям, отелям и развлечениям в самых красивых уголках мира. Мы поможем вам спланировать идеальный отпуск, учитывая все ваши предпочтения и желания. Откройте для себя новые горизонты и познакомьтесь с уникальной культурой разных стран. Пусть ваше путешествие начнется именно здесь — с нами оно станет по-настоящему особенным!</p>
         </main>
         <footer>
-            <p>E-mail</p>
-            <p class="address">Телефон</p>
+            <p>Почта: tourism@gmail.com </p>
+            <p class="tel">Телефон: 8-914-669-82-21</p>
         </footer>
     </body>
 </html>
