--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
          <nav>
             <a>О нас</a>
             <a>Цены</a>
-            <a>На главную</a>
+            <a href="https://github.com/queso65/lesson-for-children-4/edit/main/index.html">На главную</a>
         </nav>
         <main>
             <h1>Популярные страны</h1>
