--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          <nav>
             <a>О нас</a>
             <a>Цены</a>
-            <a href="https://github.com/queso65/lesson-for-children-4/edit/main/index2.html">О странах</a>
+            <a href="https://queso65.github.io/lesson-for-children-4/index2.html">О странах</a>
         </nav>
         <main>
             <h1>Турисический сайт</h1>
